--- a/webpros/web.html
+++ b/webpros/web.html
@@ -21,6 +21,9 @@
                                             <div class="coloum1table2">  
                                                 <h4>Employee Login</h4>                                       
                                                 <div class="coloum1table3">
+                                                    <a href="./fool.html" style="color: black;"><div class="coloum1table6">
+                                                        LOGIN
+                                                    </div></a>
                                                     <div class="coloum1table4">
                                                         <h5>User Name <br><br>Password:</h5>
                                                     </div>
@@ -30,6 +33,7 @@
                                                         : <input type="password" class="p_txt1">
                                                     </div>
                                                     <img src="./employ.jpg" alt="teacher" width="90px" height="90px" class="employ">
+                                                  
                                                 </div>                                                
                                             </div>
                                         </div>
@@ -39,6 +43,9 @@
                                             <div class="coloum2table2">  
                                                 <h4>Employee Login</h4>                                       
                                                 <div class="coloum2table3">
+                                                    <a href="./fool.html" style="color: black;"><div class="coloum2table6">
+                                                        LOGIN
+                                                    </div></a>
                                                     <div class="coloum2table4">
                                                         <h5>User Name <br><br>Password:</h5>
                                                     </div>
@@ -47,7 +54,7 @@
                                                         <div class="space"></div>
                                                         : <input type="password" class="p_txt1">
                                                     </div>
-                                                    <img src="./student.jpg" alt="student" width="90px" height="90px" class="student">
+                                                    <img src="./student.jpg" alt="student" width="90px" height="100px" class="student">
                                                 </div>                                                
                                             </div>
                                         </div>
@@ -57,6 +64,9 @@
                                             <div class="coloum3table2">  
                                                 <h4>Employee Login</h4>                                       
                                                 <div class="coloum3table3">
+                                                    <a href="./fool.html" style="color: black;"><div class="coloum3table6">
+                                                        LOGIN
+                                                    </div></a>
                                                     <div class="coloum3table4">
                                                         <h5>User Name <br><br>Password:</h5>
                                                     </div>
