--- a/webpros/webpros_inside/form.html
+++ b/webpros/webpros_inside/form.html
@@ -20,20 +20,24 @@
                         <h5 style="float:right;position: relative;right:5px;bottom: 53px;font-family: sans-serif; font-weight: lighter;color: rgb(0,51,153);">Log out</h5>
                     </div>
                     <div class="innerdiv1_3">
-                        <table style="border-bottom:dashed 1px #ccc;width:180px;height:1000;">
-                            <tr>
-                                <div style="width:190px;height: 38px;background-color:rgb(77,130,210)"><h5 class="menu_style">MENU</h5></div>
-                            </tr>
-                            <tr>
-                                <td>hello</td>
-                            </tr>
-                            <tr>
-                                <td style="border-bottom:dashed 1px #ccc;"></td>
-                            </tr>
-                            <tr>
-
-                            </tr>
-                        </table>
+                        <div class="innerdiv1_3_1">
+                            <div class="innerdiv1_3_2">
+                                <h5 class="menu_style">MENU</h5>
+                            </div>
+                            <table border="1px">
+                                <tr>
+                                    <td>
+                                        <img src="./arrow.jpg" alt="arr" width="10px" height="10px">
+                                    </td>
+                                    <td>
+                                        <a href="#" class="ref_link">ACADAMIC REGISTER</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2" style="border-bottom: dashed 1px ;"></td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
