--- a/webpros/webpros_inside/form.html
+++ b/webpros/webpros_inside/form.html
@@ -20,24 +20,195 @@
                         <h5 style="float:right;position: relative;right:5px;bottom: 53px;font-family: sans-serif; font-weight: lighter;color: rgb(0,51,153);">Log out</h5>
                     </div>
                     <div class="innerdiv1_3">
-                        <div class="innerdiv1_3_1">
-                            <div class="innerdiv1_3_2">
-                                <h5 class="menu_style">MENU</h5>
-                            </div>
-                            <table border="1px">
-                                <tr>
-                                    <td>
-                                        <img src="./arrow.jpg" alt="arr" width="10px" height="10px">
-                                    </td>
-                                    <td>
-                                        <a href="#" class="ref_link">ACADAMIC REGISTER</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2" style="border-bottom: dashed 1px ;"></td>
-                                </tr>
-                            </table>
-                        </div>
+		            <div class="innerdiv1_3_1">
+                        <h5 class="menu_style">MENU</h5>
+                    </div>
+		        <table style="width:180px; height:600px;">
+            		<tr>
+                		<td class="data" width="15px">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		</td class="data">
+                		<td>
+                    			<a href="#" >ACADAMIC REGISTER</a>
+                		</td>
+            		</tr>    
+            		<tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		</tr>
+	    		    <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >ACADAMIC CALENDER</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td  class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td>
+                    			<a href="#" >ASSIMENT REPORT</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+            		    <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >BACKLOGS</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >BOOKSEARCH</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >CHANGE MOBILE>NO/E-MAIL</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+			            <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >CLASS ASSIGNMENTS</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+            		    <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td class="data">
+                		    <td>
+                    			<a href="#" > COMPLAINT/SUGGESTION</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >EXAM SCHEDULE</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td  class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td>
+                    			<a href="#" >FEED BACK</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+            		    <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >LESSON PLAN</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >LIBARY BOOKS</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >PROFILE</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+			            <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >PROJECT SEARCH</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+            		    <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >RESOURCES</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >TIME TABLE</a>
+                		    </td>
+            		    </tr>    
+            		    <tr>
+				            <td class="dotted_line" colspan="2"></td>
+            		    </tr>
+	    		        <tr>
+                		    <td class="data">
+                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                		    </td>
+                		    <td class="data">
+                    			<a href="#" >TOPICS COVERED</a>
+                		    </td>
+            		    </tr>
+    		            </table>
                     </div>
                 </div>
             </div>
