--- a/webpros/webpros_inside/form.html
+++ b/webpros/webpros_inside/form.html
@@ -26,7 +26,7 @@
 		        <table style="width:180px; height:600px;">
             		<tr>
                 		<td class="data" width="15px">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		</td class="data">
                 		<td>
                     			<a href="#" >ACADAMIC REGISTER</a>
@@ -37,7 +37,7 @@
             		</tr>
 	    		    <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >ACADAMIC CALENDER</a>
@@ -48,7 +48,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td  class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td>
                     			<a href="#" >ASSIMENT REPORT</a>
@@ -59,7 +59,7 @@
             		    </tr>
             		    <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >BACKLOGS</a>
@@ -70,7 +70,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >BOOKSEARCH</a>
@@ -81,7 +81,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >CHANGE MOBILE>NO/E-MAIL</a>
@@ -92,7 +92,7 @@
             		    </tr>
 			            <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >CLASS ASSIGNMENTS</a>
@@ -103,7 +103,7 @@
             		    </tr>
             		    <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td class="data">
                 		    <td>
                     			<a href="#" > COMPLAINT/SUGGESTION</a>
@@ -114,7 +114,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >EXAM SCHEDULE</a>
@@ -125,7 +125,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td  class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td>
                     			<a href="#" >FEED BACK</a>
@@ -136,7 +136,7 @@
             		    </tr>
             		    <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >LESSON PLAN</a>
@@ -147,7 +147,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >LIBARY BOOKS</a>
@@ -158,7 +158,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >PROFILE</a>
@@ -169,7 +169,7 @@
             		    </tr>
 			            <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >PROJECT SEARCH</a>
@@ -180,7 +180,7 @@
             		    </tr>
             		    <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >RESOURCES</a>
@@ -191,7 +191,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >TIME TABLE</a>
@@ -202,7 +202,7 @@
             		    </tr>
 	    		        <tr>
                 		    <td class="data">
-                    			<img src="./arrow.jpg" alt="arrow" width="10px" height="10px">
+                    			<img src="./arrow1.jpg" alt="arrow" width="10px" height="10px">
                 		    </td>
                 		    <td class="data">
                     			<a href="#" >TOPICS COVERED</a>
